objects/Bike__c.object
<CustomObject>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Trek</fullName>
                </value>
                <value>
                    <fullName>Giant</fullName>
                </value>
                <value>
                    <fullName>Specialized</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Road</fullName>
                </value>
                <value>
                    <fullName>Mountain</fullName>
                </value>
                <value>
                    <fullName>BMX</fullName>
                </value>
                <value>
                    <fullName>Tandem</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Wheel_size__c</fullName>
        <label>Wheel size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Bike</label>
    <nameField>
        <label>Bike Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bikes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>